--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,9 @@ exclude_docs: |
 
 markdown_extensions:
   - toc:
-      permalink: 
+      permalink: "#"
+      baselevel: 1
+      separator: '-'
   - attr_list
   - def_list
   - tables
@@ -24,7 +26,7 @@ markdown_extensions:
       use_pygments: false
   - pymdownx.snippets
   - pymdownx.superfences
-  - callouts
+  # - callouts
   - mdx_gh_links:
       user: mkdocs
       repo: mkdocs
